fix: GH issue 8669 NVD3 tooltip overflow (#278)
* fix: nvd3 tooltip overflow

* fix: fix build

* Revert "fix: fix build"

This reverts commit 44532e9a5d48d5d4204542e9cb468ebae76b4d85.

* build: updating build-config package

* fix: adds newline to css file

--- a/superset-frontend/temporary_superset_ui/superset-ui/plugins/superset-ui-plugins/packages/superset-ui-legacy-preset-chart-nvd3/src/NVD3Vis.css
+++ b/superset-frontend/temporary_superset_ui/superset-ui/plugins/superset-ui-plugins/packages/superset-ui-legacy-preset-chart-nvd3/src/NVD3Vis.css
@@ -121,3 +121,13 @@
 .superset-legacy-chart-nvd3-tr-total {
   font-weight: bold;
 }
+
+/* START tooltip styles - these prevent long column names from overflowing the tooltip */
+.nvtooltip tbody tr:first-child td{
+  white-space: nowrap;
+  font-weight: bold;
+}
+.nvtooltip tbody tr:not(:first-child) td:nth-child(2){
+  word-break: break-word;
+}
+/* END tooltip styles */
